--- a/secondarypage.html
+++ b/secondarypage.html
@@ -20,7 +20,8 @@
         <header id="header">
             <nav class="navbar navbar-expand-sm sticky-top navy">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Journey's End 
+                    <a class="navbar-brand" href="index.html">
+                        Journey's End
                         <!-- <img src="./assets/datenight.jpg" height="60px" width="60px"> -->
                     </a>
                     <!-- Links -->
@@ -32,7 +33,9 @@
                             <a class="nav-link" href="#">Link 2</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="mode">Toggle Dark Mode <i class="bi bi-brightness-high-fill"></i></a>
+                            <a class="nav-link" href="#" id="mode">Toggle Dark Mode
+                                <i class="bi bi-brightness-high-fill"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -43,22 +46,22 @@
         <!-- Joe's work complete -->
         <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
         <div class="container-lg">
-        <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
+            <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
     background-image: url('./assets/images/tampa-dark.png');
     background-size: cover;
     background-position: 100%;
     height: 400px;
   ">
-            <div class="mask">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class="text-white">
-                        <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
-                        <h4 class="mb-3 mt-3 pt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
-                        <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
+                <div class="mask">
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                        <div class="text-white">
+                            <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
+                            <h4 class="mb-3 mt-3 pt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
+                            <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
         <!-- Containers for restaurant and attraction -->
         <div class="container-lg">
@@ -66,32 +69,48 @@
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline">Restaurant</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
-                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
+                    <img
+                        src="./assets/images/restfiller.webp"
+                        height="200px"
+                        width="300px"
+                        class="p-1"
+                        id="retaurant-photo"
+                    >
                     <!-- Description ID for API will be retaurant-description -->
                     <p id="retaurant-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
-                    <p><a href="#" id="retaurant-url">TripAdvisor Link</a></p>
+                    <p>
+                        <a href="#" id="retaurant-url">TripAdvisor Link</a>
+                    </p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
                     <h1 class="text-decoration-underline">Attraction</h1>
                     <!-- Photo ID for API will be attraction-photo -->
-                    <img src="./assets/images/attrfiller.jpeg" height="200px" width="300px" class="p-1" id="attraction-photo">
+                    <img
+                        src="./assets/images/attrfiller.jpeg"
+                        height="200px"
+                        width="300px"
+                        class="p-1"
+                        id="attraction-photo"
+                    >
                     <!-- Description ID for API will be attraction-description -->
                     <p id="attraction-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
-                    <p><a href="#" id="attraction-url">TripAdvisor Link</a></p>
+                    <p>
+                        <a href="#" id="attraction-url">TripAdvisor Link</a>
+                    </p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
                 </div>
             </div>
-
         </div>
         <!-- <footer>
             <p>You've reached the end of your journey</p>
         </footer> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="./assets/JavaScript/secondarypage.js"></script>
+        <script src="./assets/JavaScript/weather.js"></script>
     </body>
 </html>
