--- a/secondarypage.html
+++ b/secondarypage.html
@@ -70,9 +70,11 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 1</h1>
+                    <h1 class="text-decoration-underline" id="event1title">Event 1</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
-                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="event1-photo">
+                    <span id="event1-photo">
+                    <!-- <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="event1-photo"> -->
+                    </span> 
                     <!-- Description ID for API will be retaurant-description -->
                     <p id="event1-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
@@ -81,9 +83,11 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 2</h1>
+                    <h1 class="text-decoration-underline" id="event2title">Event 2</h1>
                     <!-- Photo ID for API will be attraction-photo -->
-                    <img src="./assets/images/attrfiller.jpeg" height="200px" width="300px" class="p-1" id="event2-photo">
+                    <span id="event2-photo">
+                      <!-- <img src="./assets/images/attrfiller.jpeg" height="200px" width="300px" class="p-1" id="event2-photo"> -->
+                    </span>
                     <!-- Description ID for API will be attraction-description -->
                     <p id="event2-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
@@ -92,9 +96,11 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 3</h1>
+                    <h1 class="text-decoration-underline" id="event3title">Event 3</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
-                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="event3-photo">
+                    <span id="event3-photo">
+                    <!-- <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="event3-photo"> -->
+                    </span>
                     <!-- Description ID for API will be retaurant-description -->
                     <p id="event3-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
@@ -189,6 +195,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="./assets/JavaScript/secondarypage.js"></script>
         <script src="./assets/JavaScript/weather.js"></script>
+        <script src="./assets/JavaScript/ticket.js"></script>
         <script>
         getWeather('tampa');
         </script>
